--- a/oppg 3 på rad.html
+++ b/oppg 3 på rad.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>oppgave: 3 på rad .-.--</title>
+    <title>oppgave: 3 på rad</title>
 
     <!-- <link rel="stylesheet" type="text/css" href=""> -->
 
